--- a/homepage/src/AudioClassifier/AudioClassifierStyles.css
+++ b/homepage/src/AudioClassifier/AudioClassifierStyles.css
@@ -7,19 +7,19 @@
 
 .AudioClassifierProject .project-title {
   font-size: calc(2vw + 2vh + 20px);
-  color: #0b509e;
+  color: #1cacff;
   font-weight: bold;
   text-align: center;
 }
 
 .AudioClassifierProject h2 {
   font-size: calc(2vw + 2vh + 20px);
-  color: #0b509e;
+  color: #1cacff;
 }
 
 .AudioClassifierProject p {
   font-size: calc(0.8vw + 0.8vh + 8px);
-  color: #515253;
+  color: #c5c5c5;
 }
 
 .AudioClassifierProject .project-container {
@@ -61,19 +61,21 @@
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-#output-container canvas {
+.AudioClassifierProject #output-container canvas {
+  position: relative;
   width: 100%;
   height: 40%;
   margin: 10%;
+  background-color: #3b3b3b;
 }
 
-#mic-result {
+.AudioClassifierProject #mic-result {
   flex-grow: 1;
   overflow-y: auto;
   margin-left: 20px;
   padding-top: 5px;
   padding-bottom: 5px;
-  background-color: #ffffff;
-  color: #0077ff;
-  font-size: calc(1vw + 1vh + 10px);
+  background-color: #1f1f1f;
+  color: #23db4b;
+  font-size: calc(0.8vw + 0.8vh + 10px);
 }
