--- a/homepage/src/HandLandmarker/HandLandmarkerStyles.css
+++ b/homepage/src/HandLandmarker/HandLandmarkerStyles.css
@@ -8,28 +8,28 @@
   align-items: center;
 }
 
+.HandLandmarkerProject .project-title {
+  font-size: calc(2vw + 2vh + 20px);
+  color: #66b918;
+  font-weight: bold;
+  text-align: center;
+}
+
 .HandLandmarkerProject h1 {
   font-size: calc(1.5vw + 1.5vh + 12px);
-  color: #0e7e4a;
+  color: #447e0e;
   text-align: center;
 }
 
 .HandLandmarkerProject h2 {
   font-size: calc(0.8vw + 0.8vh + 10px);
-  color: #b43f9b;
+  color: #b64124;
 }
 
 .HandLandmarkerProject p {
   font-size: calc(0.5vw + 0.5vh + 8px);
-  color: #515253;
+  color: #c5c5c5;
   margin: 8px;
-}
-
-.HandLandmarkerProject .project-title {
-  font-size: calc(2vw + 2vh + 20px);
-  color: #0e7e4a;
-  font-weight: bold;
-  text-align: center;
 }
 
 .HandLandmarkerProject .project-container {
